examples/test/testpolicy17080.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17080
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key23: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value35
          key37: value47
          key31: value10
      podSelector:
        matchLabels:
          key45: value19
          key46: value5
